Build structure of html page using html and css

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,78 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../src/styles.css">
     <title>Whats Cookin</title>
   </head>
   <body>
-    <h1>Whats Cookin</h1>
-
+    <nav class="header-nav">
+      <div class="nav-buttons">
+        <h1>Whats Cookin</h1>
+        <h2>Recipes To Cook</h2>
+        <h2>Shopping List</h2>
+        <h2>Favorites</h2>
+      </div>
+      <div class="search-bar">
+        <input type="search" id="search-bar" placeholder="Search For A Recipe"></input>
+        <button>Search</button>
+      </div>
+    </nav>
+    <section class="recipes-wrapper">
+      <div class="recipe-card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
+        <p>Recipe Name</p>
+        <div class="tag-buttons">
+          <button type="button" name="button">Tag</button>
+          <button type="button" name="button">Tag</button>
+          <button type="button" name="button">Tag</button>
+        </div>
+      </div>
+      <div class="recipe-card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
+        <p>Recipe Name</p>
+        <div class="tag-buttons">
+            <button type="button" name="button">Tag</button>
+            <button type="button" name="button">Tag</button>
+            <button type="button" name="button">Tag</button>
+        </div>
+      </div>
+      <div class="recipe-card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
+        <p>Recipe Name</p>
+        <div class="tag-buttons">
+          <button type="button" name="button">Tag</button>
+          <button type="button" name="button">Tag</button>
+          <button type="button" name="button">Tag</button>
+        </div>
+      </div>
+      <div class="recipe-card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
+        <p>Recipe Name</p>
+        <div class="tag-buttons">
+          <button type="button" name="button">Tag</button>
+          <button type="button" name="button">Tag</button>
+          <button type="button" name="button">Tag</button>
+        </div>
+      </div>
+      <div class="recipe-card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
+        <p>Recipe Name</p>
+        <div class="tag-buttons">
+          <button type="button" name="button">Tag</button>
+          <button type="button" name="button">Tag</button>
+          <button type="button" name="button">Tag</button>
+        </div>
+      </div>
+      <div class="recipe-card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
+        <p>Recipe Name</p>
+        <div class="tag-buttons">
+          <button type="button" name="button">Tag</button>
+          <button type="button" name="button">Tag</button>
+          <button type="button" name="button">Tag</button>
+        </div>
+      </div>
+    </section>
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/recipes.js"></script>
     <script type="text/javascript" src="../data/ingredients.js"></script>
