Fix position and size of ingredient list

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
       </div>
     </section>
     <section class="pantry-view">
-      <ul>
+      <ul class="ingredient-list">
       <div class="ingredient-wrap">
         <div class="ingredient-label">
           <input class="ingredient-checkbox"type="checkbox">
