--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
         </div>
       </div>
     </section>
-    <section class="pantry-view">
+    <section class="pantry-view hidden">
       <ul class="ingredient-list">
       <div class="ingredient-wrap">
         <div class="ingredient-label">
@@ -108,10 +108,54 @@
       </div>
       </ul>
     </section>
+    <div class="modal-recipe-view">
+      <div class="modal-content">
+        <img class="modal-img"src="https://spoonacular.com/recipeImages/595736-556x370.jpg" alt="pizza">
+        <div class="recipe-name">
+          <h1>Recipe Name</h1>
+        </div>
+        <div class="modal-recipe-info">
+          <div class="modal-ingredients">
+            <h2 class="modal-recipe-titles">Ingredients</h2>
+            <ul>
+              <li>Ingredient1</li>
+              <li>Ingredient2</li>
+              <li>Ingredient3</li>
+              <li>Ingredient4</li>
+              <li>Ingredient5</li>
+              <li>Ingredient6</li>
+              <li>Ingredient7</li>
+              <li>Ingredient8</li>
+              <li>Ingredient9</li>
+              <li>Ingredient10</li>
+              <li>Ingredient11</li>
+              <li>Ingredient12</li>
+            </ul>
+          </div>
+          <div class="modal-instructions">
+            <h2 class="modal-recipe-titles">Instructions</h2>
+            <ul>
+              <li>"In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy."</li>
+              <li>"In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy."</li>
+              <li>"In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy."</li>
+              <li>"In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy."</li>
+              <li>"In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy."</li>
+              <li>"In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy."</li>
+            </ul>
+          </div>
+        </div>
+        <div class="modal-tags">
+          <button type="button" name="button">tag1</button>
+          <button type="button" name="button">tag2</button>
+          <button type="button" name="button">tag3</button>
+          <button type="button" name="button">tag4</button>
+          <button type="button" name="button">tag5</button>
+          <button type="button" name="button">tag6</button>
+        </div>
+      </div>
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/recipes.js"></script>
     <script type="text/javascript" src="../data/ingredients.js"></script>
     <script type="text/javascript" src="./scripts.js"></script>
-
   </body>
 </html>
