Adjust modal view

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
         <button>Search</button>
       </div>
     </nav>
-    <div class="view-title hidden">
+    <div class="view-title">
       <h2>All Recipes</h2>
     </div>
-    <section class="recipes-wrapper hidden">
+    <section class="recipes-wrapper">
       <div class="recipe-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
         <p>Recipe Name</p>
@@ -153,6 +153,7 @@
           <button type="button" name="button">tag6</button>
         </div>
       </div>
+    </div>
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/recipes.js"></script>
     <script type="text/javascript" src="../data/ingredients.js"></script>
