--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <h2>All Recipes</h2>
     </div>
     <section class="recipes-wrapper">
-      <div class="recipe-card">
+      <!-- <div class="recipe-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
         <p>Recipe Name</p>
         <div class="tag-buttons">
@@ -75,9 +75,9 @@
           <button type="button" name="button">Tag</button>
           <button type="button" name="button">Tag</button>
         </div>
-      </div>
+      </div> -->
     </section>
-    <section class="pantry-view hidden">
+    <!-- <section class="pantry-view hidden">
       <ul class="ingredient-list">
       <div class="ingredient-wrap">
         <div class="ingredient-label">
@@ -108,7 +108,7 @@
       </div>
       </ul>
     </section>
-    <div class="modal-recipe-view">
+    <div class="modal-recipe-view hidden">
       <div class="modal-content">
         <img class="modal-img"src="https://spoonacular.com/recipeImages/595736-556x370.jpg" alt="pizza">
         <div class="recipe-name">
@@ -153,10 +153,13 @@
           <button type="button" name="button">tag6</button>
         </div>
       </div>
-    </div>
+    </div> -->
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/recipes.js"></script>
     <script type="text/javascript" src="../data/ingredients.js"></script>
+    <script type="text/javascript" src="./recipe.js"></script>
+    <script type="text/javascript" src="./pantry.js"></script>
+    <script type="text/javascript" src="./user.js"></script>
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
 </html>
