--- a/src/index.html
+++ b/src/index.html
@@ -14,68 +14,14 @@
         <h2>Favorites</h2>
       </div>
       <div class="search-bar">
-        <input type="search" id="search-bar" placeholder="Search For A Recipe"></input>
-        <button>Search</button>
+        <input class="search-input" type="search" id="search-bar" placeholder="Search For A Recipe"></input>
+        <button class="search-button">Search</button>
       </div>
     </nav>
     <div class="view-title">
       <h2>All Recipes</h2>
     </div>
     <section class="recipes-wrapper">
-      <!-- <div class="recipe-card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
-        <p>Recipe Name</p>
-        <div class="tag-buttons">
-          <button type="button" name="button">Tag</button>
-          <button type="button" name="button">Tag</button>
-          <button type="button" name="button">Tag</button>
-        </div>
-      </div>
-      <div class="recipe-card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
-        <p>Recipe Name</p>
-        <div class="tag-buttons">
-            <button type="button" name="button">Tag</button>
-            <button type="button" name="button">Tag</button>
-            <button type="button" name="button">Tag</button>
-        </div>
-      </div>
-      <div class="recipe-card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
-        <p>Recipe Name</p>
-        <div class="tag-buttons">
-          <button type="button" name="button">Tag</button>
-          <button type="button" name="button">Tag</button>
-          <button type="button" name="button">Tag</button>
-        </div>
-      </div>
-      <div class="recipe-card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
-        <p>Recipe Name</p>
-        <div class="tag-buttons">
-          <button type="button" name="button">Tag</button>
-          <button type="button" name="button">Tag</button>
-          <button type="button" name="button">Tag</button>
-        </div>
-      </div>
-      <div class="recipe-card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
-        <p>Recipe Name</p>
-        <div class="tag-buttons">
-          <button type="button" name="button">Tag</button>
-          <button type="button" name="button">Tag</button>
-          <button type="button" name="button">Tag</button>
-        </div>
-      </div>
-      <div class="recipe-card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTSH62JNVF5AlAumCvU5cdytTBegBaab-KejQ&usqp=CAU" alt="pizza">
-        <p>Recipe Name</p>
-        <div class="tag-buttons">
-          <button type="button" name="button">Tag</button>
-          <button type="button" name="button">Tag</button>
-          <button type="button" name="button">Tag</button>
-        </div>
-      </div> -->
     </section>
     <!-- <section class="pantry-view hidden">
       <ul class="ingredient-list">
