add test to user class for non case sensitive recipe searches

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       </div>
     </nav>
     <div class="view-title">
-      <h2>All Recipes</h2>
+      <h2 class="recipe-view">All Recipes</h2>
     </div>
     <section class="recipes-wrapper">
     </section>
