--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,9 @@
         <h2>Favorites</h2>
       </div>
       <div class="search-bar">
-        <input class="search-input" type="search" id="search-bar" placeholder="Search For A Recipe"></input>
+        <input class="search-input" type="text" id="search-bar" placeholder="Search For A Recipe"></input>
         <button class="search-button">Search</button>
+        <img class="clear-search-results" src="../assets/x-mark.png" alt="clear-button">
       </div>
     </nav>
     <div class="view-title">
