Create tag buttons on load

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
         <img class="clear-search-results" src="../assets/x-mark.png" alt="clear-button">
       </div>
     </nav>
+    <section class="tag-section">
+      
+    </section>
     <div class="view-title">
       <h2 class="recipe-view">All Recipes</h2>
     </div>
