--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       </div>
     </nav>
     <section class="tag-section">
+      <button class="all-tag-button"type="button" name="button">All Tags</button>
     </section>
     <div class="view-title">
       <h2 class="recipe-view">All Recipes</h2>
