refactor dom display of ingredient search to allow lower case

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <h2>Favorites</h2>
       </div>
       <div class="search-bar">
-        <input class="search-input" type="text" id="search-bar" placeholder="Search For A Recipe"></input>
+        <input class="search-input" type="text" id="search-bar" placeholder="Search By An Ingredient"></input>
         <button class="search-button">Search</button>
         <img class="clear-search-results" src="../assets/x-mark.png" alt="clear-button">
       </div>
