--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,13 @@
         <img class="clear-search-results" src="../assets/x-mark.png" alt="clear-button">
       </div>
     </nav>
-    <section class="tag-section">
-      <button class="all-tag-button"type="button" name="button">All Tags</button>
+    <section class="tag-area">
+      <div class="tag-title">
+        <h2>Filter By Recipe Tags</h2>
+      </div>
+      <div class="tag-section">
+        <button class="all-tag-button"type="button" name="button">All Tags</button>
+      </div>
     </section>
     <div class="view-title">
       <h2 class="recipe-view">All Recipes</h2>
