--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <h2>Filter By Recipe Tags</h2>
       </div>
       <div class="tag-section">
-        <button class="all-tag-button"type="button" name="button">All Tags</button>
+        <button class="all-tag-button"type="button" name="button">ALL TAGS</button>
       </div>
     </section>
     <div class="view-title">
@@ -32,7 +32,7 @@
     </div>
     <section class="recipes-wrapper">
     </section>
-    <!-- <section class="pantry-view hidden">
+    <section class="pantry-view hidden">
       <ul class="ingredient-list">
       <div class="ingredient-wrap">
         <div class="ingredient-label">
@@ -63,8 +63,9 @@
       </div>
       </ul>
     </section>
-    <div class="modal-recipe-view hidden">
+    <div class="modal-recipe-view">
       <div class="modal-content">
+        <div class="modal-scroll">
         <img class="modal-img"src="https://spoonacular.com/recipeImages/595736-556x370.jpg" alt="pizza">
         <div class="recipe-name">
           <h1>Recipe Name</h1>
@@ -86,6 +87,17 @@
               <li>Ingredient11</li>
               <li>Ingredient12</li>
             </ul>
+            <div class="modal-tags">
+              <h2>Tags</h2>
+              <ul>
+                <li>Tag1</li>
+                <li>Tag1</li>
+                <li>Tag1</li>
+                <li>Tag1</li>
+                <li>Tag1</li>
+                <li>Tag1</li>
+              </ul>
+            </div>
           </div>
           <div class="modal-instructions">
             <h2 class="modal-recipe-titles">Instructions</h2>
@@ -99,16 +111,9 @@
             </ul>
           </div>
         </div>
-        <div class="modal-tags">
-          <button type="button" name="button">tag1</button>
-          <button type="button" name="button">tag2</button>
-          <button type="button" name="button">tag3</button>
-          <button type="button" name="button">tag4</button>
-          <button type="button" name="button">tag5</button>
-          <button type="button" name="button">tag6</button>
-        </div>
       </div>
-    </div> -->
+      </div>
+    </div>
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/recipes.js"></script>
     <script type="text/javascript" src="../data/ingredients.js"></script>
