add button on modal

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,7 @@
                 <li>Tag1</li>
               </ul>
             </div>
+            <button>Add This Recipe</button>
           </div>
           <div class="modal-instructions">
             <h2 class="modal-recipe-titles">Instructions</h2>
