Match each ingredient data with recipes data ingredients globally

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       </div>
       </ul>
     </section>
-    <div class="modal-recipe-view">
+    <div class="modal-recipe-view hidden">
       <div class="modal-content">
         <div class="modal-scroll">
         <img class="modal-img"src="https://spoonacular.com/recipeImages/595736-556x370.jpg" alt="pizza">
