Inject content into modal view

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,28 @@
     <div class="modal-recipe-view hidden">
       <div class="modal-content">
         <div class="modal-scroll">
+          <img class="modal-img" src="" alt="recipe-image">
+          <div class="recipe-name">
+            <h1></h1>
+          </div>
+          <div class="modal-recipe-info">
+            <div class="modal-ingredients">
+              <h2 class="modal-recipe-titles">Ingredients</h2>
+              <ul>
+              </ul>
+              <div class="modal-tags">
+                <h2>Tags</h2>
+                <ul>
+                </ul>
+              </div>
+              <button>Add This Recipe</button>
+            </div>
+            <div class="modal-instructions">
+              <h2 class="modal-recipe-titles">Instructions</h2>
+              <ul>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -78,49 +100,3 @@
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
 </html>
-<!-- <img class="modal-img"src="https://spoonacular.com/recipeImages/595736-556x370.jpg" alt="pizza">
-<div class="recipe-name">
-  <h1>Recipe Name</h1>
-</div>
-<div class="modal-recipe-info">
-  <div class="modal-ingredients">
-    <h2 class="modal-recipe-titles">Ingredients</h2>
-    <ul>
-      <li>Ingredient1</li>
-      <li>Ingredient2</li>
-      <li>Ingredient3</li>
-      <li>Ingredient4</li>
-      <li>Ingredient5</li>
-      <li>Ingredient6</li>
-      <li>Ingredient7</li>
-      <li>Ingredient8</li>
-      <li>Ingredient9</li>
-      <li>Ingredient10</li>
-      <li>Ingredient11</li>
-      <li>Ingredient12</li>
-    </ul>
-    <div class="modal-tags">
-      <h2>Tags</h2>
-      <ul>
-        <li>Tag1</li>
-        <li>Tag1</li>
-        <li>Tag1</li>
-        <li>Tag1</li>
-        <li>Tag1</li>
-        <li>Tag1</li>
-      </ul>
-    </div>
-    <button>Add This Recipe</button>
-  </div>
-  <div class="modal-instructions">
-    <h2 class="modal-recipe-titles">Instructions</h2>
-    <ul>
-      <li>"In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy."</li>
-      <li>"In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy."</li>
-      <li>"In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy."</li>
-      <li>"In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy."</li>
-      <li>"In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy."</li>
-      <li>"In a large mixing bowl, whisk together the dry ingredients (flour, pudding mix, soda and salt). Set aside.In a large mixing bowl of a stand mixer, cream butter for 30 seconds. Gradually add granulated sugar and brown sugar and cream until light and fluffy."</li>
-    </ul>
-  </div>
-</div> -->
