--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../src/styles.css">
     <title>Whats Cookin</title>
   </head>
@@ -66,6 +67,7 @@
     <div class="modal-recipe-view hidden">
       <div class="modal-content">
         <div class="modal-scroll">
+          <img class="clear-modal" src="../assets/x-mark.png" alt="clear-button">
           <img class="modal-img" src="" alt="recipe-image">
           <div class="recipe-name">
             <h1></h1>
@@ -76,11 +78,10 @@
               <ul>
               </ul>
               <div class="modal-tags">
-                <h2>Tags</h2>
+                <h2 class="modal-tags-header">Tags</h2>
                 <ul>
                 </ul>
               </div>
-              <button>Add This Recipe</button>
             </div>
             <div class="modal-instructions">
               <h2 class="modal-recipe-titles">Instructions</h2>
@@ -88,6 +89,10 @@
               </ul>
             </div>
           </div>
+        </div>
+        <div class="modal-add-buttons">
+          <button class="add-recipe-to-cook">Add To Cook</button>
+          <button class="add-to-favorites">Add To Favorites
         </div>
       </div>
     </div>
