Add favorites in modal view

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="modal-add-buttons">
           <button class="add-recipe-to-cook">Add To Cook</button>
-          <button class="add-to-favorites">Add To Favorites
+          <button class="favorite-button-target">Add To Favorites</button>
         </div>
       </div>
     </div>
