--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,8 @@
           <img class="clear-modal" src="../assets/x-mark.png" alt="clear-button">
           <img class="modal-img" src="" alt="recipe-image">
           <div class="recipe-name">
-            <h1></h1>
+            <h1 class="recipe-title"></h1>
+            <img class="favorite-button" src="../assets/heart-shape-silhouette.svg">
           </div>
           <div class="modal-recipe-info">
             <div class="modal-ingredients">
@@ -92,7 +93,6 @@
         </div>
         <div class="modal-add-buttons">
           <button class="add-recipe-to-cook">Add To Cook</button>
-          <button class="favorite-button-target">Add To Favorites</button>
         </div>
       </div>
     </div>
