--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <h1>Whats Cookin</h1>
         <h2>Recipes To Cook</h2>
         <h2>Shopping List</h2>
-        <h2>Favorites</h2>
+        <h2 class="favorites-view">Favorites</h2>
       </div>
       <div class="search-bar">
         <input class="search-input" type="text" id="search-bar" placeholder="Search By An Ingredient"></input>
