--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
         <h1>Whats Cookin</h1>
         <h2>Recipes To Cook</h2>
         <h2>Shopping List</h2>
+        <h2 class="pantry-button">Your Pantry</h2>
         <h2 class="favorites-view">Favorites</h2>
       </div>
       <div class="search-bar">
