Switch to home view on nav click

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav class="header-nav">
       <div class="nav-buttons">
-        <h1>Whats Cookin</h1>
+        <h1 class="home-view">Whats Cookin</h1>
         <h2>Recipes To Cook</h2>
         <h2>Shopping List</h2>
         <h2 class="pantry-button">Your Pantry</h2>
@@ -23,7 +23,7 @@
     </nav>
     <section class="tag-area">
       <div class="tag-title">
-        <h2>Filter By Recipe Tags</h2>
+        <h2>Filter By Recipes Tags</h2>
       </div>
       <div class="tag-section">
         <button class="all-tag-button"type="button" name="button">ALL TAGS</button>
