--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     </nav>
     <section class="tag-area">
       <div class="tag-title">
-        <h2>Filter By Recipes Tags</h2>
+        <h2>Filter By Recipe Tags</h2>
       </div>
       <div class="tag-section">
         <button class="all-tag-button"type="button" name="button">ALL TAGS</button>
