display shopping list view

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <div class="nav-buttons">
         <h1 class="home-view">Whats Cookin</h1>
         <h2>Recipes To Cook</h2>
-        <h2>Shopping List</h2>
+        <h2 class="view-shopping-list">Shopping List</h2>
         <h2 class="pantry-button">Your Pantry</h2>
         <h2 class="favorites-view">Favorites</h2>
       </div>
@@ -63,6 +63,10 @@
           <h3>4</h3>
         </div>
       </div>
+      </ul>
+    </section>
+    <section class="shopping-list-view hidden">
+      <ul class="ingredient-list">
       </ul>
     </section>
     <div class="modal-recipe-view hidden">
