Add event recipes to cook event and class name

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <nav class="header-nav">
       <div class="nav-buttons">
         <h1 class="home-view">Whats Cookin</h1>
-        <h2>Recipes To Cook</h2>
+        <h2 class="recipes-to-cook">Recipes To Cook</h2>
         <h2 class="view-shopping-list">Shopping List</h2>
         <h2 class="pantry-button">Your Pantry</h2>
         <h2 class="favorites-view">Favorites</h2>
