--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
           </div>
         </div>
         <div class="modal-add-buttons">
-          <button class="add-recipe-to-cook">Add To Cook</button>
+          <button class="add-recipe-to-cook" id="0">Add To Cook</button>
         </div>
       </div>
     </div>
