--- a/src/index.html
+++ b/src/index.html
@@ -54,17 +54,17 @@
           <div class="modal-recipe-info">
             <div class="modal-ingredients">
               <h2 class="modal-recipe-titles">Ingredients</h2>
-              <ul>
+              <ul class="modal-ingredients-list">
               </ul>
               <div class="modal-tags">
                 <h2 class="modal-tags-header">Tags</h2>
-                <ul>
+                <ul class="modal-tags-list">
                 </ul>
               </div>
             </div>
             <div class="modal-instructions">
               <h2 class="modal-recipe-titles">Instructions</h2>
-              <ul>
+              <ul class="modal-instructions-list">
               </ul>
             </div>
           </div>
