move index.html and styles.css to the main part of the directory

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../src/styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
     <title>Whats Cookin</title>
   </head>
   <body>
@@ -18,7 +18,7 @@
       <div class="search-bar">
         <input class="search-input" type="text" id="search-bar" placeholder="Search By An Ingredient"></input>
         <button class="search-button">Search</button>
-        <img class="clear-search-results" src="../assets/x-mark.png" alt="clear-button">
+        <img class="clear-search-results" src="./assets/x-mark.png" alt="clear-button">
       </div>
     </nav>
     <section class="tag-area">
@@ -45,11 +45,11 @@
     <div class="modal-recipe-view hidden">
       <div class="modal-content">
         <div class="modal-scroll">
-          <img class="clear-modal" src="../assets/x-mark.png" alt="clear-button">
+          <img class="clear-modal" src="./assets/x-mark.png" alt="clear-button">
           <img class="modal-img" src="" alt="recipe-image">
           <div class="recipe-name">
             <h1 class="recipe-title"></h1>
-            <img class="favorite-button" src="../assets/heart-shape-silhouette.svg">
+            <img class="favorite-button" src="./assets/heart-shape-silhouette.svg">
           </div>
           <div class="modal-recipe-info">
             <div class="modal-ingredients">
@@ -74,12 +74,12 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="../data/users.js"></script>
-    <script type="text/javascript" src="../data/recipes.js"></script>
-    <script type="text/javascript" src="../data/ingredients.js"></script>
-    <script type="text/javascript" src="./recipe.js"></script>
-    <script type="text/javascript" src="./pantry.js"></script>
-    <script type="text/javascript" src="./user.js"></script>
-    <script type="text/javascript" src="./scripts.js"></script>
+    <script type="text/javascript" src="./data/users.js"></script>
+    <script type="text/javascript" src="./data/recipes.js"></script>
+    <script type="text/javascript" src="./data/ingredients.js"></script>
+    <script type="text/javascript" src="./src/recipe.js"></script>
+    <script type="text/javascript" src="./src/pantry.js"></script>
+    <script type="text/javascript" src="./src/user.js"></script>
+    <script type="text/javascript" src="./src/scripts.js"></script>
   </body>
 </html>
